# Pomodoro

./: .gitignore  LICENSE  README.md  meson.build
data/: gschema.xml
src/: Application.vala  Main  Main.vala  Pomodoro.vala  Timer.vala  TimerView.vala  Window.vala  meson.build
src/Widgets/: HeaderBar.vala  HeaderBar.vala~  Window.vala  Window.vala~
